<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        android:text="@string/label_hii_there"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/label_subtitle_login"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_72dp"
        android:background="@color/black"
        android:hint="@string/hint_enter_username"
        android:padding="@dimen/margin_4dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_grey"
            android:hint="@string/hint_enter_username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:hint="@string/hint_password"
        android:padding="@dimen/margin_4dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_username_login"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_grey"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_weight="1"
        android:text="@string/label_recover_password"
        android:textAppearance="@style/TextAppearance.Wakey.LabelSmall.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_login" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_56dp"
        android:background="@drawable/bg_button_gradient"
        android:text="@string/label_signin"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_button_login" />

    <View
        android:id="@+id/view5"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_login" />

    <View
        android:id="@+id/view6"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_login" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_64dp"
        android:text="@string/label_dont_have_an_account_signup"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_signup_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4dp"
        android:text="@string/label_signup"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/gradient_end"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dont_have_account"
        app:layout_constraintTop_toTopOf="@+id/tv_dont_have_account" />

    <ImageButton
        android:id="@+id/imb_google_login"
        android:layout_width="@dimen/width_64dp"
        android:layout_height="@dimen/height_50dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_button_border"
        android:padding="@dimen/margin_16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/google"
        app:layout_constraintEnd_toStartOf="@+id/imb_facebook_login"
        app:layout_constraintStart_toEndOf="@+id/imb_apple_login"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="@string/label_google" />

    <ImageButton
        android:id="@+id/imb_apple_login"
        android:layout_width="@dimen/width_64dp"
        android:layout_height="@dimen/height_50dp"
        android:layout_marginStart="@dimen/margin_72dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_button_border"
        android:padding="@dimen/margin_12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="@string/label_apple" />

    <ImageButton
        android:id="@+id/imb_facebook_login"
        android:layout_width="@dimen/width_64dp"
        android:layout_height="@dimen/height_50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_72dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_button_border"
        android:padding="@dimen/margin_12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="@string/label_facebook" />

    <ImageButton
        android:id="@+id/imb_back_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_back"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/label_back" />

</androidx.constraintlayout.widget.ConstraintLayout>